# ChangeLog for app-text/xpdf
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/ChangeLog,v 1.180 2009/05/14 19:54:42 loki_val Exp $

  14 May 2009; Peter Alfredsen <loki_val@gentoo.org>
  -files/poppler-0.10.0.patch, -xpdf-3.02-r1.ebuild, xpdf-3.02-r2.ebuild,
  +files/xpdf-3.02-poppler-0.10.0.patch,
  +files/xpdf-3.02-poppler-0.11.0.patch:
  Fix bug 269546, FTBFS w/poppler-0.11.0, patch from Alexis Ballier, the
  magnificent. Move poppler-0.10.0.patch to ${P}-poppler-0.10.0.patch for
  consistency. Delete old.

  02 Apr 2009; Markus Meier <maekke@gentoo.org> xpdf-3.02-r2.ebuild:
  amd64 stable (bug #242930)

  02 Apr 2009; Joseph Jezak <josejx@gentoo.org> xpdf-3.02-r2.ebuild:
  Marked ppc/ppc64 stable (bug #242930).

  02 Apr 2009; Raúl Porcel <armin76@gentoo.org> xpdf-3.02-r2.ebuild:
  alpha/arm/ia64/sh/x86 stable (bug #242930)

  02 Apr 2009; Jeroen Roovers <jer@gentoo.org> xpdf-3.02-r2.ebuild:
  Stable for HPPA too (bug #242930).

  02 Apr 2009; Ferris McCormick <fmccor@gentoo.org> xpdf-3.02-r2.ebuild:
  Sparc stable --- works fine for me (bug #242930).

  30 Mar 2009; Peter Alfredsen <loki_val@gentoo.org> xpdf-3.02-r1.ebuild,
  xpdf-3.02-r2.ebuild:
  Update dependencies w.r.t. bug 264230, fully-split-out poppler transition.

*xpdf-3.02-r2 (29 Mar 2009)

  29 Mar 2009; Peter Alfredsen <loki_val@gentoo.org> +xpdf-3.02-r2.ebuild:
  Bump. Fixes bug 200023. Thanks to KIMURA Masaru / hiyuh
  <hiyuh.root@gmail.com> for the fix and Joseph <syscon780@gmail.com> for
  the report. Also fixes bug #242930 (CVE-2009-1144).

  16 Jan 2009; Peter Alfredsen <loki_val@gentoo.org>
  +files/xpdf-3.02-as-needed.patch, xpdf-3.02-r1.ebuild:
  Fix as-needed, bug 247003.

  14 Oct 2008; Peter Alfredsen <loki_val@gentoo.org>
  -files/poppler-0.5.9.patch, +files/poppler-0.10.0.patch,
  -files/xpdf-3.01-poppler-0.5.1.patch,
  -files/xpdf-3.01-poppler-nodrm.patch, -xpdf-3.01-r8.ebuild,
  xpdf-3.02-r1.ebuild: