@@ -6,6 +6,7 @@ AUX xpdf-3.02-poppler-0.10.0.patch 1590 RMD160 343cdc65c065c37352fb50fbb123bec3a
 AUX xpdf-3.02-poppler-0.11.0.patch 314 RMD160 20806826221797a5026b9e706bd17af1b9e1530c SHA1 52baf1491066c759338db952fd64bc6cc03ac2ab SHA256 4fabf222c3064b20ea86e4a60f64ee9b7639f50ac9e276d9621c2a9bfe2dc404
 AUX xpdf-3.02-poppler-nodrm.patch 1633 RMD160 707bd5287e05b1d7469431c9fa67aba6bb4bd27e SHA1 5fa0e0790b85843c91d64f2b9cd1df91bf8507a1 SHA256 515a89af7c097f7d6b373e27be870d25b897444e31cf5f3af5a840c144ddd84c
 AUX xpdfrc.5 17548 RMD160 215ed02d4653b5aaf3dc6b4d029bd5434343e619 SHA1 0fe82390a85c2c37313390c8a1bb79069bcc249b SHA256 645d58cf1266ac7037af5288d9b02a6b9eb40bb3fa49516612f3e6fb0d9960d5
+DIST xpdf-3.02-patchset-01.tar.bz2 27795 RMD160 64a73fbb2122155f72ba9a0435875b04b572069c SHA1 d20a659e6fe6a1aa2b842ede3c740b5dcd1290e7 SHA256 17968c8ad572c396a5a1017fe2923e17082bf185247882143dd78e806e132104
 DIST xpdf-3.02-poppler-20071121.tar.bz2 107935 RMD160 faf276c824ef12f44609ef7610dc309c87ee3c96 SHA1 bb548689ca2107e99e51b48060e0b583ed9e10ed SHA256 5e04476110ef9ec122e5aa427b4be5e79a003d2740ec8c65b32f526a03b52ed5
 DIST xpdf-arabic-2003-feb-16.tar.gz 1058 RMD160 5790c247333125a1ed1df0cbcacf0ffd876c9f58 SHA1 abcd48c6f4226320a76c6bb8ae1550a410cab573 SHA256 b196448a54bcbf7d8af551c75299ed95ccf1bb304208f23479ae3dcc6e84e1fc
 DIST xpdf-chinese-simplified-2004-jul-27.tar.gz 835960 RMD160 6241d2ff1270566f74ee6b98b1b96a50d2e4b41d SHA1 c873db6d74b3b455f794dd7c9804a63dcf68d547 SHA256 ac886f7bccdc7c70fcfcbd9916ea907a93f0fe698ff7ca81da8f312c7fab07d7
@@ -19,5 +20,6 @@ DIST xpdf-latin2-2002-oct-22.tar.gz 1435 RMD160 7dd1f32d0e857789983d64ee71fedfde
 DIST xpdf-thai-2002-jan-16.tar.gz 1873 RMD160 5bb942b4a50cf1ff9758dbfbb9cd6e3310c059c3 SHA1 93de04cb2211a7451d6e8f62ddef1748d2fa37f4 SHA256 9708a88ed37150ecdbba3abb01cf86f1a8a75192a758af729a59f7162722e931
 DIST xpdf-turkish-2002-apr-10.tar.gz 1140 RMD160 25e49dd17c93d6904372f1223c2204543ddbf22d SHA1 2a225c726ebef40f63902081604064bd8b4ae117 SHA256 25b992d294e2e135e2b1b3d93010d97f33b3e2cd9437aa903d2795016a10e6c7
 EBUILD xpdf-3.02-r2.ebuild 3020 RMD160 13e2e456480e14aefa5852f77efd4e0f5e87f8e9 SHA1 a88bb41af39e6ca25a2484cdb20abc1292775e1e SHA256 81aff1030f7f760ee00216cc59537829916aaffbe6d5b3707c73f3ae24173c62
-MISC ChangeLog 23584 RMD160 88c61814af661fd76c0fbd0b8e5da80a22ac910e SHA1 b6ec6c2ae7d7507f14ff96b528e5af255558e54e SHA256 64fe6c6b9bce3637fcea0c59ccce0822d997cd3d8313ad5111c185f39544e43e
+EBUILD xpdf-3.02-r3.ebuild 1896 RMD160 bff8ecdf15db0129f412f072cde8e812a5e5db58 SHA1 287d9136b7592f085ee588e5cb810fdab09f677f SHA256 a7ab0737d9274238bbf86b9ad052fc29b4b4736fa92580133a415f495e6df7e8
+MISC ChangeLog 23882 RMD160 8c66f66dbf7b212a110d5a100bebcbef6e951d6b SHA1 cf359104518363d79c39bacce902acd36cfcbcf9 SHA256 9ef32c7b9a4b0f6dcb27a865f6d8e1eee14a35cf4a790500761ca6014ea4bc21
 MISC metadata.xml 234 RMD160 553d24231ed003084bcef961dccbd659d67e03d9 SHA1 34590aace0d52fd29fc6e1511c30a898826fe414 SHA256 7014fa9f87f6eedd08a265737c2884aafcb4ca673bfcec5b0a3f9fabbe5ef194
