@@ -1,6 +1,14 @@
 # ChangeLog for app-text/xpdf
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/ChangeLog,v 1.180 2009/05/14 19:54:42 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/ChangeLog,v 1.182 2009/08/24 15:20:23 loki_val Exp $
+
+  24 Aug 2009; Peter Alfredsen <loki_val@gentoo.org> xpdf-3.02-r3.ebuild:
+  Fix needless USE=nls dependency on poppler-data.
+
+*xpdf-3.02-r3 (24 Aug 2009)
+
+  24 Aug 2009; Peter Alfredsen <loki_val@gentoo.org> +xpdf-3.02-r3.ebuild:
+  Add xpdf-3.02-r3, which is patched to work with >=poppler-0.11.3
 
   14 May 2009; Peter Alfredsen <loki_val@gentoo.org>
   -files/poppler-0.10.0.patch, -xpdf-3.02-r1.ebuild, xpdf-3.02-r2.ebuild,
